# what-to-do-cli

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.dev.md  README.md  READMEdev.md
db/: tasks.db
migrations/2023-01-24-152524_create_tasks/: up.sql
src/: lib.rs  main.rs  schema.rs  tasks.rs
src/tasks/: mod.rs  models.rs  tasks.rs
